# swjtu-scores-monitor

./: .gitignore  README.md  function_app.py  pyproject.toml  requirements.txt
.github/workflows/: monitor.yml  schedule_task.yml
actions/: index.py
api/: index.py
scraper/: database.py
test/: config.py  score.py  test_ocr.py
utils/: fetcher.py  ocr.py
